Renamed generic medals to commendations. Preparing to add ribbon support
