# api/swagger.yaml
@@ -59,7 +59,7 @@ paths:
               Prism_Trainings:
                 type: integer
                 format: int64
-              medals:
+              commendations:
                 type: array
                 items:
                   type: object
@@ -109,11 +109,11 @@ paths:
         404:
           description: Medal not found
  
-  /all-medals:
+  /all-commendations:
     get:
       tags:
         - Medal
-      summary: Get a list of all medals
+      summary: Get a list of all commendations
       produces:
         - application/json
       responses:
@@ -138,7 +138,7 @@ paths:
                     type: string
                  
         404:
-          description: No medals found
+          description: No commendations found
 
 
   /award:
